Updates to ecommerce-app and Callenge 01

--- a/02.Doing/ecommerce-app/src/components/BannerCarousel/BannerCarousel.css
+++ b/02.Doing/ecommerce-app/src/components/BannerCarousel/BannerCarousel.css
@@ -1,7 +1,13 @@
 .banner-carousel {
   margin: 0;
 }
-
+.banner-carousel .banner {
+  display: inline-block;
+}
 .banner {
   margin: 0;
+  max-width: 500px;
+}
+.banner img {
+  max-width: 100%;
 }
