--- a/02.Doing/ecommerce-app/src/components/BannerCarousel/BannerCarousel.css
+++ b/02.Doing/ecommerce-app/src/components/BannerCarousel/BannerCarousel.css
@@ -1,5 +1,6 @@
 .banner-carousel {
   margin: 0;
+  position: relative;
 }
 .banner-carousel .banner {
   display: inline-block;
@@ -10,4 +11,47 @@
 }
 .banner img {
   max-width: 100%;
+}
+.banner-slide {
+  padding: 1.5rem 4rem;
+  min-height: 300px;
+}
+
+.carousel-btn {
+  position: absolute;
+  top: 50%;
+  margin-top: -1rem;
+  height: 2.6rem;
+  width: 2.6rem;
+  border: 1px solid #ccc;
+  border-radius: 1.3rem;
+  line-height: 1rem;
+  font-size: 1.5rem;
+  padding: 0;
+  text-align: center;
+}
+.carousel-btn-prev {
+  left: 1rem;
+}
+.carousel-btn-next {
+  right: 1rem;
+}
+.carousel-indicators {
+  position: absolute;
+  width: 100%;
+  display: block;
+  bottom: 1rem;
+  text-align: center;
+  margin: 0 2rem;
+}
+.carousel-indicators button {
+  margin: .25rem;
+  border: none;
+  width: 1rem;
+  height: 1rem;
+  border-radius: .5rem;
+  padding: 0;
+}
+.carousel-indicators .active {
+  background-color: rebeccapurple;
 }
