Added ProductCard, badge and used products.js for these components. Various css fixes and better design.

--- a/02.Doing/ecommerce-app/src/components/App/App.css
+++ b/02.Doing/ecommerce-app/src/components/App/App.css
@@ -1,3 +1,9 @@
+body {
+  --primary-color: rgba(127, 0, 25, 1);
+  --primary-text: #2c2c2c;
+  --success-text: #155724;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +41,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.products-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem 0;
 }
