--- a/02.Doing/ecommerce-app/src/components/BannerCarousel/BannerCarousel.css
+++ b/02.Doing/ecommerce-app/src/components/BannerCarousel/BannerCarousel.css
@@ -42,7 +42,7 @@
   display: block;
   bottom: 1rem;
   text-align: center;
-  margin: 0 2rem;
+  margin: 0;
 }
 .carousel-indicators button {
   margin: .25rem;
