Styles for photos page in gallery-app

--- a/02.Doing/gallery-app/src/layout/StatusBar/StatusBar.css
+++ b/02.Doing/gallery-app/src/layout/StatusBar/StatusBar.css
@@ -21,3 +21,13 @@
 .menu a:hover {
   background-color: firebrick;
 }
+
+.statusbar {
+  display: block;
+  position: relative;
+}
+.status-actions {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
