--- a/02.Doing/to-do-list/src/index.css
+++ b/02.Doing/to-do-list/src/index.css
@@ -1,4 +1,5 @@
-body {
+@import url('./styles/pico.min.css');
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -12,4 +13,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+.grid>button {
+  margin-bottom: 0;
+}
+.App.container-fluid {
+  max-width: 768px;
 }
